--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,20 @@
+# Enable Rewrite Engine
 RewriteEngine On
+
+# -------------------------- #
+# 1. Force HTTPS
+# -------------------------- #
 RewriteCond %{HTTPS} !=on
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# -------------------------- #
+# 2. Gzip Compression
+# -------------------------- #
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript
+
+# -------------------------- #
+# 3. Browser Cache
+# -------------------------- #
 <IfModule mod_expires.c>
   ExpiresActive On
   ExpiresByType text/css "access plus 1 month"
@@ -9,6 +22,9 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application
   ExpiresByType image/jpeg "access plus 1 year"
   ExpiresByType image/png "access plus 1 year"
 </IfModule>
-RewriteEngine On
+
+# -------------------------- #
+# 4. Remove .html from URLs
+# -------------------------- #
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
